# PROJECT_1

BOVW/lib/: CMakeLists.txt  build_histograms  main  test.html
BOVW/lib/include/: SearchEngine.hpp  dictionary.hpp
BOVW/lib/src/: BowDictionary.cpp  SearchEngine.cpp  convert_dataset.cpp  dictionary.cpp  histogram.cpp  html_writer.cpp  image_browser.cpp  load_dataset.cpp  main.cpp  serialize.cpp  showhtml.cpp
Bash/bash/task_2/: README.md  build.sh  build_cmake.sh  install.sh
BovW_Dictionary/: CMakeLists.txt  main.cpp
BovW_Dictionary/include/: BowDictionary.hpp  kMeans.hpp
BovW_Dictionary/src/: BowDictionary.cpp  kMeans.cpp
Core/task1/: CMakeLists.txt  a.out  task1.cpp
Core/task2/: a.out
HW2/task1/: a.out  task1.cpp
HW2/task1/.cache/clangd/index/: task1.cpp.EFD10F92D5C6E71C.idx
HW2/task2/: a.out  task2.cpp
Hw1/homework_1/task_1/: commands.sh
Hw1/homework_1/task_2/: CMakeLists.txt
bovw_histogram/: CMakelists.txt
bovw_histogram/include/: BowDictionary.hpp  histogram.hpp
classes/: CMakeLists.txt  main.cpp
classes/io_tools/: io_tools.cpp
classes/src/: Image.cpp
functions/: CMakeLists.txt
functions/api/: html_writer.hpp
heap/task_1/: main.cpp
serialization/: CMakeLists.txt  main.cpp
serialization/include/: homework_5.h
serialization/src/: convert_dataset.cpp  main.cpp  serialize.cpp
serialization/tests/: CMakeLists.txt  sifts_internal.cpp  test_serialize.cpp
stl/tests/: CMakeLists.txt  homework_4.h  ipb_algorithm.cpp
testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
